增加字典功能、hash缓存增加过期时间
